src/components/ProductCardStandard/styles.module.css
.productCard {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: var(--blue-0);
    width: 408px;
    height: 837px;
    box-shadow: 12px 12px 12px 0px #00000040;
}

.imgSection {
    position: relative;
    z-index: 0;
}

#productImg img {
    object-fit: cover;
}

#favoriteIcon {
    position: absolute;
    top: 10px;
    left: 24px;
    cursor: pointer;
    z-index: 2;
}

#discountIcon {
    position: absolute;
    top: 10px;
    right: 24px;
}

.productInfo {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 19px;
    gap: 12px;
}

.productInfoHeader {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 10px;
}

.productInfoHeader h1 {
    font-family: var(--font-numans);
    font-weight: 400;
    font-size: 1.5rem;
    line-height: 1.8rem;
    letter-spacing: 5%;
    text-transform: uppercase;
    color: var(--blue-300);
    text-align: center;
}

.priceSection {
    display: flex;
    flex-direction: column;
    gap: 15px;
    text-align: center;
}

.pricePartBox {
    display: flex;
    flex-direction: column;
    text-align: center;
}

.realPrice {
    font-family: var(--font-nunito-sans);
    font-weight: 400;
    font-size: 1rem;
    line-height: 100%;
    letter-spacing: 0%;
    color: var(--red-200);
    text-decoration: line-through;
}

.discountPrice, .price {
    font-family: var(--font-nunito-sans);
    font-weight: 700;
    font-size: 2.3rem;
    line-height: 100%;
    letter-spacing: 0%;
    color: var(--blue-400);
}

.installments {
    font-family: var(--font-nunito-sans);
    font-weight: 400;
    font-size: 1rem;
    line-height: 100%;
    letter-spacing: 0%;
    color: var(--blue-400);
}

.installmentPrice {
    font-weight: 800;
}

